cabal-version:      2.4
name:               hoauth2-tutorial
version:            0.1.0.0

homepage:           https://github.com/freizl/hoauth2
license:            BSD-3-Clause
license-file:       LICENSE
author:             Haisheng Wu
maintainer:         Haisheng Wu <freizl@gmail.com>
copyright:          Haisheng Wu
category:           Network
build-type:         Simple
stability:          Beta
tested-with:        GHC <=9.2.2

-- A copyright notice.
-- copyright:
-- category:

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git


library
  hs-source-dirs: src
  exposed-modules: Hoauth2Tutorial
  build-depends:    base ^>=4.16.1.0
    , aeson                  >=2.0    && <2.2
    , bytestring             >=0.9    && <0.12
    , hoauth2
    , http-types             >=0.11   && <0.13
    , scotty                 >=0.10.0 && <0.13
    , text                   >=0.11   && <1.3
    , transformers           ^>=0.5
    , uri-bytestring         >=0.2.3  && <0.4
    , wai                    ^>=3.2
    , warp                   >=3.2    && <3.4
    , http-conduit           >=2.1    && <2.4
    -- , microlens              ^>=0.4.0
    -- , mustache               >=2.2.3  && <2.5.0
    -- , parsec                 >=3.1.11 && <3.2.0
    -- , unordered-containers   >=0.2.5
    -- , wai-middleware-static  >=0.8.1  && <0.10.0
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations

executable hoauth2-tutorial
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0, hoauth2-tutorial
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
      -Wwarnings-deprecations
