cabal-version: 2.4
name:          hoauth2-tutorial
version:       0.2
synopsis:      Tutorial for using hoauth2
description:
  Tutorial to demostrate how to use hoauth2 to implement OAuth2 flow in an web Application.

homepage:      https://github.com/freizl/hoauth2
license:       MIT
license-file:  LICENSE
author:        Haisheng Wu
maintainer:    Haisheng Wu <freizl@gmail.com>
copyright:     Haisheng Wu
category:      Network
build-type:    Simple
stability:     Beta
tested-with:   GHC <=9.2.2

-- A copyright notice.
-- copyright:
-- category:

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git

library
  hs-source-dirs:   src
  exposed-modules:  HOAuth2Tutorial
  build-depends:
    , aeson           >=2.0    && <2.2
    , base            >=4.5    && <5
    , bytestring      >=0.9    && <0.12
    , hoauth2         >=2.7
    , http-conduit    >=2.1    && <2.4
    , http-types      >=0.11   && <0.13
    , scotty          >=0.10.0 && <0.13
    , text            >=0.11   && <1.3
    , transformers    ^>=0.5
    , uri-bytestring  >=0.2.3  && <0.4
    , wai             ^>=3.2
    , warp            >=3.2    && <3.4

  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations

executable hoauth2-tutorial
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base              >=4.5 && <5
    , hoauth2-tutorial

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations
