cabal-version: 2.4
name:          hoauth2-tutorial
version:       0.8.0
synopsis:      Tutorial for using hoauth2
description:
  Tutorial to demostrate how to use hoauth2 to implement OAuth2 flow in an web Application.

homepage:      https://github.com/freizl/hoauth2
license:       MIT
license-file:  LICENSE
author:        Haisheng Wu
maintainer:    Haisheng Wu <freizl@gmail.com>
copyright:     Haisheng Wu
category:      Network
build-type:    Simple
stability:     Beta
tested-with:   GHC <=9.6.1

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git

common common
  hs-source-dirs:   src
  build-depends:
    , aeson           >=2.0   && <2.3
    , base            >=4.11  && <5
    , bytestring      >=0.9   && <0.13
    , hoauth2         >=2.9   && <2.15
    , http-conduit    >=2.1   && <2.4
    , http-types      >=0.11  && <0.13
    , scotty          >=0.10  && <0.13
    , text            >=2.0   && <2.3
    , transformers    >=0.4   && <0.7
    , uri-bytestring  >=0.2.3 && <0.4

  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations

executable hoauth2-tutorial
  import:  common
  main-is: HOAuth2Tutorial.hs

executable hoauth2-experiment-tutorial
  import:        common
  main-is:       HOAuth2ExperimentTutorial.hs
  build-depends: containers >=0.6 && <0.8
