Cabal-version: 2.4
Name:                hoauth2
-- http://wiki.haskell.org/Package_versioning_policy
Version:             2.2.0

Synopsis:            Haskell OAuth2 authentication client

Description: Haskell OAuth2 authentication client. Tested with the following services:
             .
             * AzureAD: <https://docs.microsoft.com/en-us/azure/active-directory/develop/v1-protocols-oauth-code>
             .
             * Google: <https://developers.google.com/accounts/docs/OAuth2WebServer>
             .
             * Github: <http://developer.github.com/v3/oauth/>
             .
             * Facebook: <http://developers.facebook.com/docs/facebook-login/>
             .
             * Fitbit: <http://dev.fitbit.com/docs/oauth2/>
             .
             * StackExchange: <https://api.stackexchange.com/docs/authentication>
             .
             * DropBox: <https://www.dropbox.com/developers/reference/oauth-guide>
             .
             * Weibo: <http://open.weibo.com/wiki/Oauth2>
             .
             * Douban: <http://developers.douban.com/wiki/?title=oauth2>

Homepage:            https://github.com/freizl/hoauth2
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Haisheng Wu
Maintainer:          Haisheng Wu <freizl@gmail.com>
Copyright:           Haisheng Wu
Category:            Network
Build-type:          Simple
Stability:           Beta
Tested-With:         GHC <= 8.10.7

Extra-source-files: README.org

Source-Repository head
  Type:     git
  Location: git://github.com/freizl/hoauth2.git

Library
  hs-source-dirs:   src
  default-language: Haskell2010
  Exposed-modules: Network.OAuth.OAuth2.HttpClient
                   Network.OAuth.OAuth2.Internal
                   Network.OAuth.OAuth2
                   Network.OAuth.OAuth2.TokenRequest
                   Network.OAuth.OAuth2.AuthorizationRequest

  Build-Depends: base                 >= 4     && < 5,
                 binary               >= 0.8.3 && < 0.8.9,
                 text                 >= 0.11  && < 1.3,
                 bytestring           >= 0.9   && < 0.11,
                 http-conduit         >= 2.1   && < 2.4,
                 http-types           >= 0.11  && < 0.13,
                 aeson                >= 2.0   && < 2.1,
                 transformers         >= 0.5   && < 0.6,
                 unordered-containers >= 0.2.5 && < 0.3,
                 uri-bytestring       >= 0.2.3 && < 0.4,
                 uri-bytestring-aeson >= 0.1   && < 0.2,
                 microlens            >= 0.4.0 && < 0.5,
                 hashable             >= 1.2.6 && < 1.5.0,
                 exceptions           >= 0.8.3 && < 0.11

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-unused-do-bind

