cabal-version:      2.4
name:               hoauth2

-- http://wiki.haskell.org/Package_versioning_policy
version:            2.8.1
synopsis:           Haskell OAuth2 authentication client
description:        See readme for more details.
homepage:           https://github.com/freizl/hoauth2
license:            MIT
license-file:       LICENSE
author:             Haisheng Wu
maintainer:         Haisheng Wu <freizl@gmail.com>
copyright:          Haisheng Wu
category:           Network
build-type:         Simple
stability:          Beta
tested-with:        GHC <=9.6.1
extra-source-files: README.org

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  autogen-modules:    Paths_hoauth2
  other-modules:
    Network.OAuth.OAuth2.Internal
    Network.OAuth2.Experiment.Pkce
    Network.OAuth2.Experiment.Types
    Network.OAuth2.Experiment.Utils
    Paths_hoauth2

  exposed-modules:
    Network.OAuth.OAuth2
    Network.OAuth.OAuth2.AuthorizationRequest
    Network.OAuth.OAuth2.HttpClient
    Network.OAuth.OAuth2.TokenRequest
    Network.OAuth2.Experiment

  default-extensions:
    DataKinds
    DeriveGeneric
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    RecordWildCards
    TypeApplications
    TypeFamilies

  build-depends:
    , aeson                 >=2.0    && <2.2
    , base                  >=4      && <5
    , base64                ^>=0.4
    , binary                ^>=0.8
    , bytestring            >=0.9    && <0.12
    , containers            ^>=0.6
    , cryptonite            ^>=0.30
    , data-default          ^>=0.7
    , exceptions            >=0.8.3  && <0.11
    , http-conduit          >=2.1    && <2.4
    , http-types            >=0.11   && <0.13
    , memory                ^>=0.18
    , microlens             ^>=0.4.0
    , text                  ^>=2.0
    , transformers          >=0.6
    , uri-bytestring        >=0.2.3  && <0.4
    , uri-bytestring-aeson  ^>=0.1

  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations

test-suite hoauth-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -Wall
  build-depends:
    , aeson    >=2.0 && <2.2
    , base     >=4   && <5
    , hoauth2
    , hspec    >=2   && <3

  other-modules:      Network.OAuth.OAuth2.TokenRequestSpec
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
